--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "es6-promise": "^4.1.0",
     "fastclick": "^1.0.6",
     "normalize.css": "^7.0.0",
+    "vue": "^2.3.3",
     "vue-router": "^2.3.1"
   },
   "devDependencies": {
